samples/_failures_safe/1761343193_c22b91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c547dff5.c: In function ‘main’:
./samples/SAFE/__tmp_c547dff5.c:146:5: error: expected expression at end of input
  146 |     if (add_compression_block(&ctx, test_data2, sizeof(test_data2)) !=
      |     ^~
./samples/SAFE/__tmp_c547dff5.c:146:5: error: expected declaration or statement at end of input
